Fixes for issue #285